2017-06-21 Henry Butowsky  <henryb@hush.com>

	* The feature  --cll_mth not working correctly
	  so have set the default to off in ncap2.cc

2017-06-20  Charlie Zender  <zender@uci.edu>

	* Extend ESMF_weight_only section

	* Fix false-positive regression with ncwa #5

	* Clean-up compiler warnings and CEWIs on Linux

	* ncclimo clean-up ncrcat files in diurnal mode

	* About to work on ncwa mask bug

	* NCO 4.6.8-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.8-alpha03 final changes';git push
	git tag -a 4.6.8-alpha03 -m 'ncap2 cnk, ncclimo diurnal, -W wgt_opt bug, NorESM rgr';git push --tags

2017-06-19  Charlie Zender  <zender@uci.edu>

	* Diurnal daily climos appear to work, though slowly

	* ncclimo: experiment with tpd for diurnal daily climos

2017-06-15 Henry Butowsky  <henryb@hush.com>

	* Modify nco_cnk_sz_set_trv() "final safety check" so if dim_sz != 0L then cnk_sz<=dim_sz

2017-06-14  Charlie Zender  <zender@uci.edu>

	* Implement stubs to handle ERWG 7.1+ --weight_only map-files

	* Fix 4.6.7 ncremap bug where -W wgt_opt was ignored

	* Allow compression with UGRID output

2017-06-13  Charlie Zender  <zender@uci.edu>

	* Make dt_fmt automatically set PRN_CLN_LGB and obviate redundant --cal

2017-06-12  Charlie Zender  <zender@uci.edu>

	* Apply temporary fix whenever cnk_sz == 0L, period

2017-06-11  Charlie Zender  <zender@uci.edu>

	* Temporary fix to TODO nco1137 ncwa chunking fails with --rdd reported by Joy 20170605
	dmn_cmn[] contains zero for some dimensions with --rdd, so set minimum cnk_sz to 1

2017-06-09  Charlie Zender  <zender@uci.edu>

	* Fix CF dimension inferral algorithm to correctly count coordinates

	* Add lat_nm_in=j, lon_nm_in=i to look-up table for NorESM1 and similar CMIP5 grids

2017-06-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.8-alpha02 final changes';git push